[LIB][UIMAP][TESTS][HELPER] Implemented MAUTOSEL-395

--- a/fixture/default/core/Mage/ProductAttribute/uimap/admin/ProductAttribute.yml
+++ b/fixture/default/core/Mage/ProductAttribute/uimap/admin/ProductAttribute.yml
@@ -216,7 +216,7 @@ saved_product_attribute_from_product_page:
     mca: catalog_product/addAttribute/attribute/%attributeId%/group/%tabId%/tab/group_%tabId%/store/0/set/%setId%/type/%productType%/popup/1/
     title: Manage Products / Catalog / Magento Admin
     uimap:
-        form: &savedProductAttributeFromProductPageForm
+        form:
         buttons:
             close_window: //button[span='Close Window']
         messages: *productAttributeMessages
