--- a/fixture/default/core/Mage/_uimapIncludes/frontend.yml
+++ b/fixture/default/core/Mage/_uimapIncludes/frontend.yml
@@ -48,6 +48,7 @@ frontend_header:
                             qtyElementsInTable: //td[@class='pager']//span[contains(@id,'total-count')]
                             fieldNameWithValidationMessage: "/ancestor::*[1]/preceding-sibling::*[1]/descendant-or-self::*[string-length(text())>1]"
         messages:
+            success_registration: //li[normalize-space(@class)='success-msg' and contains(.,'Thank you for registering with')]
             general_notice: "//*/descendant::*[normalize-space(@class)='notice-msg'][string-length(.)>1]"
             general_success: "//*/descendant::*[normalize-space(@class)='success-msg'][string-length(.)>1]"
             general_error: "//*/descendant::*[normalize-space(@class)='error-msg'][string-length(.)>1]"
