--- a/fixture/default/core/Mage/SystemConfiguration/data/ShippingSettings.yml
+++ b/fixture/default/core/Mage/SystemConfiguration/data/ShippingSettings.yml
@@ -38,7 +38,7 @@ shipping_settings_usa:
         tab_name: sales_shipping_settings
         configuration:
             country: United States
-            region_state: California
+            origin_state: California
             zip_postal_code: 90034
             city: Los Angeles
             street_address: 3212 Bagley Avenue
@@ -49,7 +49,7 @@ shipping_settings_france:
         tab_name: sales_shipping_settings
         configuration:
             country: France
-            region_state: Dordogne
+            origin_state: Dordogne
             zip_postal_code: 24100
             city: Bergerac
             street_address: 10, rue Jean Vilar
@@ -60,7 +60,7 @@ shipping_settings_default:
         tab_name: sales_shipping_settings
         configuration:
             country: United States
-            region_state: California
+            origin_state: California
             zip_postal_code: 90034
             city:
             street_address:
