[DATA][LIB] fixed date format

--- a/fixture/default/core/Mage/Category/data/Category.yml
+++ b/fixture/default/core/Mage/Category/data/Category.yml
@@ -74,8 +74,8 @@ root_category_all: &categoryAll
     use_parent_category_settings: No
     apply_to_products: Yes
     custom_design: default
-    active_from: 3/1/12
-    active_to: 12/31/13
+    active_from: %currentDate%
+    active_to: %currentDate%
     page_layout: 3 columns
     custom_layout_update: Custom Layout Update
     #Category Products
