--- a/fixture/default/core/Mage/Customer/uimap/frontend/Customer.yml
+++ b/fixture/default/core/Mage/Customer/uimap/frontend/Customer.yml
@@ -72,12 +72,12 @@ customer_login:
             fieldsets:
                 -
                     new_account:
-                        xpath: //div[normalize-space(@class)='col-1 new-users']
+                        xpath: //div[contains(@class,'new-users')]
                         buttons:
                             create_account: //button[span='Create an Account' or span='Register']
                 -
                     log_in_customer:
-                        xpath: //div[normalize-space(@class)='col-2 registered-users']
+                        xpath: //div[contains(@class,'registered-users')]
                         buttons:
                             login: //button[span='Login']
                         links:
